--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #FAFAFA;
+    background-color: #161616;
     font-family: 'roboto', sans-serif;
 }
 
