--- a/src/Pages/Result.css
+++ b/src/Pages/Result.css
@@ -1,29 +1,24 @@
 .result-container {
+    height: 300px;
     display: flex;
     justify-content: space-around;
-    flex-wrap: wrap;
-    gap: 20px;
-  }
-  
-  .card {
-    width: 229px;
-    height: auto;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    overflow: hidden;
   }
   
   .video-container {
-    position: relative;
+    width: 45%;
+    scale: .5;
   }
   
+
+  .video-container img{
+    scale: 2;
+    margin-top: 300px;
+    margin-right: 200px;
+  }
+
   .video-container video,
   .video-container img {
     width: 100%;
     height: auto;
-  }
-
-  .video-container video {
-    scale: .7;
   }
   
